--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="flex">
-        <div>
+        <div class="RememberMe">
             <input type="checkbox">
             <label for="RememberMe">Remember me</label>
         </div>
